fix: Improve chat layout, and fix overflow and scroll issues

--- a/apihub-root/wallet/web-components/space-application/pages/agent-page/agent-page.css
+++ b/apihub-root/wallet/web-components/space-application/pages/agent-page/agent-page.css
@@ -3,12 +3,14 @@ agent-page {
     height: 100%;
     transition: width 0.3s;
     min-width: 0;
-    display:none;
+    display: none;
 }
 
 .middle-content {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    width:100%;
+    width: 100%;
     height: 100%;
 }
 
@@ -38,12 +40,11 @@ agent-page {
 
 .space-controls {
     z-index: 10;
-    display:flex;
-    position: absolute;
+    display: flex;
+    height: 50px;
     align-items: center;
     justify-content: space-between;
-    margin: 15px;
-    width: calc(100% - 30px);
+    width: 100%;
     background-color: var(--chat-header-background);
     border-radius: 10px;
     border: 2px solid var(--chat-header-border);
@@ -52,7 +53,7 @@ agent-page {
 .chats {
     display: flex;
     align-items: center;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
 }
 
 .selected-chat {
@@ -136,9 +137,7 @@ agent-page {
 }
 
 .chat-log {
-    overflow: scroll;
     position: relative;
-    height: calc(100% - 70px);
 }
 
 .chat-background {
@@ -146,40 +145,40 @@ agent-page {
     opacity: 0.05;
     object-fit: cover;
     position: absolute;
+    top: 0;
     right: 0;
     bottom: 0;
 }
 
 
 .chat-input-container {
-    height:120px;
-    min-height:120px;
-    max-height:120px;
-    padding: 10px 15px;
     background: #E9E9E9;
     justify-content: space-between;
     display: flex;
     align-items: center;
     position: sticky;
-    bottom: 0;
-    width: 100%;
-    box-sizing: border-box;
+    padding:5px;
+    padding-block-start:10px;
+    padding-block-end: 10px;
 }
 
 .input-container {
-    padding-left: 15px;
+    display: flex;
+    align-items: center;
+    margin-inline-start:15px;
+    margin-inline-end:15px;
+    padding-inline-start:10px;
     background: var(--chat-input-container);
     border-radius: 6px;
     min-height: 60px;
-    max-height:50px;
+    max-height: 50px;
     width: 100%;
-    display: flex;
-    align-items: center;
+    height:120px;
 }
 
 #input {
     min-height: 60px;
-    max-height:60px;
+    max-height: 60px;
     resize: none;
     width: 100%;
     padding: 16px;
@@ -197,17 +196,19 @@ agent-page {
 }
 
 .conversation {
-    padding-top: 70px; /* Adjust according to the actual height of your header */
-    position: relative;
+    display:flex;
+    gap: 10px;
+    flex-direction:column;
     overflow-y: scroll;
-    height: calc(100% - 120px); /* Adjust based on your layout */
+    height: calc(100% - 120px);
 }
 
 .chat-box-container {
     position: relative;
     display: flex;
     margin-bottom: 15px;
-    margin-left:6px;
+    margin-inline-end: 10px;
+    margin-inline-start: 10px;
     align-items: stretch;
 }
 
@@ -224,29 +225,31 @@ agent-page {
 }
 
 
-
 .user-box {
     width: auto;
-    max-width: 60%;
     word-wrap: break-word;
     white-space: normal;
     border-radius: 16px 16px 16px 16px;
     color: var(--user-text);
     background: var(--white-text);
-    margin-right: auto;
-    margin-left:5px;
+    margin-inline-end: 10px;
+    margin-inline-start: 10px;
+}
+
+.robot {
+    display: flex;
+    justify-items: flex-end;
+    flex-direction: row-reverse;
 }
 
 .robot-box {
     width: auto;
-    max-width: 60%;
     word-wrap: break-word;
     white-space: normal;
     border-radius: 16px 16px 16px 16px;
     background: var(--light-blue);
     color: var(--robot-text);
-    margin-left: auto;
-    margin-right:6px;
+    margin-inline-start: 58px;
 }
 
 .page-logo-section {
@@ -276,11 +279,9 @@ agent-page {
 .settings-list-container {
     padding: 5px 0;
     border-radius: 10px;
-    width: 187px;
     box-shadow: 0px 1px 5.5px 0px #65666754;
     display: none;
     position: absolute;
-    top: 40px;
     z-index: 1;
     right: 0;
     flex-direction: column;
